# poc_langchain

./: .gitignore  README.md  dev-requirements.txt  main.py  makefile  pyproject.toml
src/: app.py  settings.py
src/entities/: language_models.py
src/utils/: openia_models.json
